--- a/contest/2020/2020_6.md
+++ b/contest/2020/2020_6.md
@@ -1,2 +1,32 @@
 # leetcode contest 2020.6
 
+## weekly contest 192
+
+2020.6.7
+
+中午和xyj约饭，没做。晚上回来补的。
+
+### [1470. Shuffle the Array](https://leetcode.com/problems/shuffle-the-array/)
+
+```cpp
+class Solution
+{
+public:
+    vector<int> shuffle(vector<int> &nums, int n)
+    {
+        vector<int> ret(2 * n);
+        for (int i = 0; i < n; i++)
+        {
+            ret[2 * i] = nums[i];
+            ret[2 * i + 1] = nums[i + n];
+        }
+        return ret;
+    }
+};
+```
+
+### [1471. The k Strongest Values in an Array](https://leetcode.com/problems/the-k-strongest-values-in-an-array/)
+
+### [1472. Design Browser History](https://leetcode.com/problems/design-browser-history/)
+
+### [1473. Paint House III](https://leetcode.com/problems/paint-house-iii/)
