update leetcode weekly contest 194

--- a/contest/2020/2020_6.md
+++ b/contest/2020/2020_6.md
@@ -35,7 +35,7 @@ public:
 
 2020.6.14
 
-### [1](https://leetcode.com/problems/running-sum-of-1d-array/)
+### [1480. Running Sum of 1d Array](https://leetcode.com/problems/running-sum-of-1d-array/)
 
 简单求和
 
@@ -57,7 +57,7 @@ public:
 };
 ```
 
-### [2](https://leetcode.com/problems/least-number-of-unique-integers-after-k-removals/)
+### [1481. Least Number of Unique Integers after K Removals](https://leetcode.com/problems/least-number-of-unique-integers-after-k-removals/)
 
 ```cpp
 class Solution
@@ -90,7 +90,7 @@ public:
 };
 ```
 
-### [3](https://leetcode.com/problems/minimum-number-of-days-to-make-m-bouquets/)
+### [1482. Minimum Number of Days to Make m Bouquets](https://leetcode.com/problems/minimum-number-of-days-to-make-m-bouquets/)
 
 二分搜索。想到了，但是没按这个思路做下去..
 
@@ -120,4 +120,101 @@ int minDays(vector<int>& A, int m, int k) {
     }
 ```
 
-### [4](5456. Kth Ancestor of a Tree Node)
+### [1483. Kth Ancestor of a Tree Node](https://leetcode.com/problems/kth-ancestor-of-a-tree-node/)
+
+## weekly contest 194
+
+2020.6.21
+
+### [1486. XOR Operation in an Array](https://leetcode.com/problems/xor-operation-in-an-array/)
+
+水题
+
+### [1487. Making File Names Unique](https://leetcode.com/problems/making-file-names-unique/)
+
+不同的文件名
+
+```cpp
+class Solution
+{
+public:
+    vector<string> getFolderNames(vector<string> &names)
+    {
+        unordered_map<string, int> filenames;
+        vector<string> ret;
+        for (int i = 0; i < names.size(); i++)
+        {
+            if (filenames.find(names[i]) == filenames.end())
+            {
+                filenames[names[i]] = 1;
+                ret.push_back(names[i]);
+            }
+            else
+            {
+                while (1)
+                {
+                    string temp = names[i] + '(' + to_string(filenames[names[i]]) + ')';
+                    filenames[names[i]]++;
+                    if (filenames.find(temp) == filenames.end())
+                    {
+                        filenames[temp] = 1;
+                        ret.push_back(temp);
+                        break;
+                    }
+                }
+            }
+        }
+
+        return ret;
+    }
+};
+```
+
+### [1488. Avoid Flood in The City](https://leetcode.com/problems/avoid-flood-in-the-city/)
+
+用map来保存上一个rain的index，用set来保存0的Index。当发现第二个相同的rain时，要保证两个index之间有0，并将其赋值为rains[i]
+
+```cpp
+class Solution
+{
+public:
+    vector<int> avoidFlood(vector<int> &rains)
+    {
+
+        map<int, int> full;
+        set<int> dry;
+        vector<int> ret(rains.size(), -1);
+        for (int i = 0; i < rains.size(); i++)
+        {
+            if (rains[i] == 0)
+            {
+                ret[i] = 1;
+                dry.insert(i);
+            }
+            else
+            {
+                if (full.find(rains[i]) != full.end())
+                {
+
+                    auto it = dry.lower_bound(full[rains[i]]);
+
+                    if (it == dry.end())
+                    {
+                        ret.resize(0);
+                        return ret;
+                    }
+
+                    int pos = *it;
+                    ret[pos] = rains[i];
+                    dry.erase(pos);
+                }
+                full[rains[i]] = i;
+            }
+        }
+
+        return ret;
+    }
+};
+```
+
+###
