--- a/contest/2020/2020_6.md
+++ b/contest/2020/2020_6.md
@@ -217,4 +217,4 @@ public:
 };
 ```
 
-###
+### [1489. Find Critical and Pseudo-Critical Edges in Minimum Spanning Tree](https://leetcode.com/problems/find-critical-and-pseudo-critical-edges-in-minimum-spanning-tree/)
