update weekly contest 195

--- a/contest/2020/2020_6.md
+++ b/contest/2020/2020_6.md
@@ -218,3 +218,136 @@ public:
 ```
 
 ### [1489. Find Critical and Pseudo-Critical Edges in Minimum Spanning Tree](https://leetcode.com/problems/find-critical-and-pseudo-critical-edges-in-minimum-spanning-tree/)
+
+## weekly contest 195
+
+2020.6.28
+
+周赛刚开始，题还没看，leetcode竟然崩了！看来周赛越来越火了。
+
+做了前两题。
+
+### [1496. Path Crossing](https://leetcode.com/problems/path-crossing/)
+
+给一个由上下左右构成的行动路径，判断按照此路径走会不会重复走一个点。
+
+使用set保存走过的点即可
+
+```cpp
+class Solution
+{
+public:
+    bool isPathCrossing(string path)
+    {
+        int x = 0, y = 0;
+        set<pair<int, int>> pos;
+
+        pos.insert({0, 0});
+
+        bool cross = false;
+        for (int i = 0; i < path.size(); i++)
+        {
+            if (path[i] == 'N')
+                y++;
+            else if (path[i] == 'E')
+                x--;
+            else if (path[i] == 'S')
+                y--;
+            else
+                x++;
+                
+            if (pos.find({x, y}) != pos.end())
+                return true;
+            pos.insert({x, y});
+        }
+
+        return cross;
+    }
+};
+```
+
+### [1497. Check If Array Pairs Are Divisible by k](https://leetcode.com/problems/check-if-array-pairs-are-divisible-by-k/)
+
+给一串数字（偶数个），将其分成两两一组，判断是否能满足每一组的和都是k的倍数。
+
+首先，对每个数字进行%k操作，如果是负数，再+k，这样，所有的数都被等价转换为\[0,k-1\]。对其进行技术，需要保证count(i)和count(k-i)个数相等，因为他们必须两两配对。count(0)的个数任意。当k为偶数的时候，需要考虑count(k/2)也是偶数，这样才能两两配对
+
+```cpp
+class Solution
+{
+public:
+    bool canArrange(vector<int> &arr, int k)
+    {
+        vector<int> count(k, 0);
+
+        for (int i = 0; i < arr.size(); i++)
+        {
+            arr[i] %= k;
+            if (arr[i] < 0)
+                arr[i] += k;
+            count[arr[i]]++;
+        }
+
+        for (int i = 1; i <= k / 2; i++)
+        {
+            if (count[i] != count[k - i])
+                return false;
+        }
+        if (k % 2 == 0 && count[k / 2] % 2 != 0)
+            return false;
+
+        return true;
+    }
+};
+```
+
+### [1498. Number of Subsequences That Satisfy the Given Sum Condition](https://leetcode.com/problems/number-of-subsequences-that-satisfy-the-given-sum-condition/)
+
+对一个数组序列，求有多少个子序列，其最大值最小值之和，不超过target值。
+
+这个题主要是要想到，对数组进行排序。因为是子序列，而且用的最大最小值，所以结果与原数组的顺序是没有关系的，排完序求min和max就方便许多。
+
+第二，要利用有序数组的two sum思想，使用left、right两个指针，当两数相加大于target时，right--，否则，能构成满足条件的子序列，此时，只要保证最小值是left，其他所有的子序列都满足，共有pow(2,right-left)个。计算完之后left++，更新最小值
+
+第三，利用`pows[i] = pows[i - 1] * 2 % big`快速求出pow的值
+
+```cpp
+class Solution
+{
+public:
+    int numSubseq(vector<int> &nums, int target)
+    {
+
+        sort(nums.begin(), nums.end());
+        static constexpr int big = 1000000007;
+
+        vector<int> pows(nums.size(), 1);
+        for (int i = 1; i < nums.size(); i++)
+            pows[i] = pows[i - 1] * 2 % big;
+
+        int count = 0;
+
+        int left = 0, right = nums.size() - 1;
+
+        while (left <= right)
+        {
+            if (nums[left] + nums[right] > target)
+            {
+                right--;
+            }
+            else
+            {
+                count += pows[right - left];
+                count %= big;
+                left++;
+            }
+        }
+
+        return count;
+    }
+};
+```
+
+### [1499. Max Value of Equation](https://leetcode.com/problems/max-value-of-equation/)
+
+依然没看题
