--- a/contest/2020/2020_7.md
+++ b/contest/2020/2020_7.md
@@ -52,6 +52,39 @@ public:
 
 求矩阵的所有全1子矩阵个数
 
+以[i][j]作为矩阵的右下角，dp[i][j]表示从[i][j]起往上数，有多少个1.用动态规划很容易求得。
+
+得到这个数后，再考虑将1*dp[i][j]的矩阵往左，求出min(minv, dp[i][k]); 即能得到更"宽"的全1矩阵个数
+
+```cpp
+class Solution
+{
+public:
+    int numSubmat(vector<vector<int>> &mat)
+    {
+        int m = mat.size();
+        int n = mat[0].size();
+        vector<vector<int>> dp(m, vector<int>(n, 0));
+        int ret = 0;
+        for (int i = 0; i < m; i++)
+        {
+            for (int j = 0; j < n; j++)
+            {
+                if (mat[i][j] == 0)
+                    continue;
+                dp[i][j] = (i > 0 ? dp[i - 1][j] : 0) + 1;
+                int minv = dp[i][j];
+                for (int k = j; k >= 0; k--)
+                {
+                    minv = min(minv, dp[i][k]);
+                    ret += minv;
+                }
+            }
+        }
+        return ret;
+    }
+};
+```
 
 ### [1505. Minimum Possible Integer After at Most K Adjacent Swaps On Digits](https://leetcode.com/problems/minimum-possible-integer-after-at-most-k-adjacent-swaps-on-digits/)
 
