update weekly contest 197

--- a/contest/2020/2020_7.md
+++ b/contest/2020/2020_7.md
@@ -89,3 +89,184 @@ public:
 ### [1505. Minimum Possible Integer After at Most K Adjacent Swaps On Digits](https://leetcode.com/problems/minimum-possible-integer-after-at-most-k-adjacent-swaps-on-digits/)
 
 给一个由数字组成的string，和整数K。在K次交换相邻两个数字后，能得到的最小数是多少
+
+## weekly contest 197
+
+2020.7.12
+
+做了前三题，最后一题参考了python版本的代码，可惜没有来得及做出来。
+
+### [1512. Number of Good Pairs](https://leetcode.com/problems/number-of-good-pairs/)
+
+```cpp
+class Solution
+{
+public:
+    int numIdenticalPairs(vector<int> &nums)
+    {
+        unordered_map<int, int> count;
+        for (int i = 0; i < nums.size(); i++)
+            count[nums[i]]++;
+        int ret = 0;
+        for (auto it = count.begin(); it != count.end(); it++)
+        {
+            ret += it->second * (it->second - 1) / 2;
+        }
+        return ret;
+    }
+};
+```
+
+### [1513. Number of Substrings With Only 1s](https://leetcode.com/problems/number-of-substrings-with-only-1s/)
+
+求01字符串有多少个全1子串。
+
+先利用dp计算出所有长为n的全1串有多少字串，再找到字符串中的所有最长全1串
+
+从discussion中抄了个nb的代码
+
+```cpp
+int numSub(string s)
+{
+    int res = 0, count = 0, mod = 1e9 + 7;
+    for (char c : s)
+    {
+        count = c == '1' ? count + 1 : 0;
+        res = (res + count) % mod;
+    }
+    return res;
+}
+```
+
+### [1514. Path with Maximum Probability](https://leetcode.com/problems/path-with-maximum-probability/)
+
+一开始想着用类似A-star算法进行求解，但发现排序的操作太耗时了，改用priority_queue能过。看了评论发现可以用`vector<double>`来记录概率，并记录该点是否需要访问，非常巧妙
+
+```cpp
+
+class Solution
+{
+public:
+    double maxProbability(int n, vector<vector<int>> &edges, vector<double> &succProb, int start, int end)
+    {
+        //将参数数据进行转换。
+        vector<vector<pair<int, double>>> myedge(n);
+        for (int i = 0; i < edges.size(); i++)
+        {
+            myedge[edges[i][0]].push_back({edges[i][1], succProb[i]});
+            myedge[edges[i][1]].push_back({edges[i][0], succProb[i]});
+        }
+
+        //利用一个vector存储所有点当前的最大概率。只有当求出来的概率比当前概率大时，才去访问对应的路径
+        vector<double> probs(n, 0);
+        probs[start] = 1.0;
+        vector<int> nodes;
+        nodes.push_back(start);
+
+        while (!nodes.empty())
+        {
+            vector<int> new_nodes;
+            for (auto e : nodes)    //遍历当前的所有点，求出到达的下一个点的概率
+            {
+                for (int i = 0; i < myedge[e].size(); i++)
+                {
+                    //仅当新概率比原概率高的时候，更新概率，并继续遍历。
+                    if (probs[e] * myedge[e][i].second > probs[myedge[e][i].first])
+                    {
+                        probs[myedge[e][i].first] = probs[e] * myedge[e][i].second;
+                        new_nodes.push_back(myedge[e][i].first);
+                    }
+                }
+            }
+
+            swap(nodes, new_nodes);
+        }
+        return probs[end];
+    }
+};
+```
+
+### [1515. Best Position for a Service Centre](https://leetcode.com/problems/best-position-for-a-service-centre/)
+
+给出平面内很多个二维点(x,y)，找到一个点，使其到所有这些点的距离之和最小。基准点选择所有点的算术中心点。
+
+竟然考了道数学题。利用机器学习中的梯度下降法求解。
+
+```cpp
+class Solution
+{
+public:
+    double dist(vector<double> &p1, vector<int> &p2)
+    {
+        return sqrt((p1[0] - p2[0]) * (p1[0] - p2[0]) + (p1[1] - p2[1]) * (p1[1] - p2[1]));
+    }
+
+    double cost(vector<double> &point, vector<vector<int>> &positions)
+    {
+        double sum = 0;
+        for (int i = 0; i < positions.size(); i++)
+        {
+            sum += dist(point, positions[i]);
+        }
+        return sum;
+    }
+
+    pair<double, double> gradient(vector<double> &point, vector<vector<int>> &positions)
+    {
+        double dx = 0, dy = 0;
+        for (int i = 0; i < positions.size(); i++)
+        {
+            if (dist(point, positions[i]) != 0)
+            {
+                dx += (point[0] - positions[i][0]) / dist(point, positions[i]);
+                dy += (point[1] - positions[i][1]) / dist(point, positions[i]);
+            }
+        }
+
+        double s = sqrt(dx * dx + dy * dy);
+        dx /= s;
+        dy /= s;
+        return {dx, dy};
+    }
+
+    double getMinDistSum(vector<vector<int>> &positions)
+    {
+        double rate = 0.01;
+        int step = 100000;
+
+        vector<double> point(2, 0);
+
+        for (int i = 0; i < positions.size(); i++)
+        {
+            point[0] += positions[i][0];
+            point[1] += positions[i][1];
+        }
+
+        point[0] /= positions.size();
+        point[1] /= positions.size();
+
+        point.push_back(positions[0][0] + 1e-8);
+        point.push_back(positions[0][1] + 1e-8);
+        double epsilon = 1e-7;
+        for (int i = 0; i < step; i++)
+        {
+            double cost_ori = cost(point, positions);
+            auto g = gradient(point, positions);
+
+            vector<double> newpoint;
+            newpoint.push_back(point[0] - rate * g.first);
+            newpoint.push_back(point[1] - rate * g.second);
+            double cost_new = cost(newpoint, positions);
+            if (cost_ori - cost_new > epsilon)
+            {
+                point = newpoint;
+            }
+            else if (cost_new - cost_ori > epsilon)
+                rate *= 0.3;
+            else
+                break;
+        }
+        return cost(point, positions);
+    }
+};
+```
