update weekly contest 198

--- a/contest/2020/2020_7.md
+++ b/contest/2020/2020_7.md
@@ -270,3 +270,86 @@ public:
     }
 };
 ```
+
+## weekly contest 198
+
+这次的周赛也太难了...一小时就做出一道题,再加半小时应该还能再做出一题,我太菜了。
+
+### [1518. Water Bottles](https://leetcode.com/problems/water-bottles/)
+
+经典空瓶换饮料。
+
+```cpp
+class Solution
+{
+public:
+    int numWaterBottles(int numBottles, int numExchange)
+    {
+
+        int ret = 0;
+        int empty = 0;
+
+        while (numBottles > 0 || empty >= numExchange)
+        {
+            ret += numBottles;
+            empty += numBottles;
+            numBottles = empty / numExchange;
+            empty %= numExchange;
+        }
+
+        return ret;
+    }
+};
+```
+
+### [1519. Number of Nodes in the Sub-Tree With the Same Label](https://leetcode.com/problems/number-of-nodes-in-the-sub-tree-with-the-same-label/)
+
+给一个树，求以每个结点作为根节点的子树，label出现次数。dfs
+
+这道题卡常..可以说在leetcode非常少见。优化了以后才过的。再不行就把vector换成指针。
+
+```cpp
+class Solution
+{
+public:
+    vector<int> countSubTrees(int n, vector<vector<int>> &edges, string labels)
+    {
+        vector<vector<int>> map(n);
+        for (int i = 0; i < edges.size(); i++)
+        {
+            map[edges[i][0]].push_back(edges[i][1]);
+            map[edges[i][1]].push_back(edges[i][0]);
+        }
+        vector<int> ret(n, 0);
+        helper(0, map, labels, ret);
+        return ret;
+    }
+
+    vector<int> helper(int node, vector<vector<int>> &edge, string &labels, vector<int> &ret)
+    {
+        vector<int> r(26, 0);
+        ret[node]++;
+        r[labels[node] - 'a']++;
+        auto nextnode = edge[node];
+        for (int i = 0; i < nextnode.size(); i++)
+        {
+            if (ret[nextnode[i]] != 0)
+                continue;
+            auto count = helper(nextnode[i], edge, labels, ret);
+
+            for (int i = 0; i < 26; i++)
+            {
+                r[i] += count[i];
+            }
+        }
+        ret[node] = r[labels[node] - 'a'];
+        return r;
+    }
+};
+```
+
+### [1520. Maximum Number of Non-Overlapping Substrings](https://leetcode.com/discuss/general-discussion/743125/weekly-contest-198)
+
+后面两题都没看
+
+### [1521. Find a Value of a Mysterious Function Closest to Target](https://leetcode.com/problems/find-a-value-of-a-mysterious-function-closest-to-target/)
