update weekly contest 199

--- a/contest/2020/2020_7.md
+++ b/contest/2020/2020_7.md
@@ -353,3 +353,61 @@ public:
 后面两题都没看
 
 ### [1521. Find a Value of a Mysterious Function Closest to Target](https://leetcode.com/problems/find-a-value-of-a-mysterious-function-closest-to-target/)
+
+## weekly contest 199
+
+2020.7.26
+
+今天出去玩啦，并没有参加，题目是晚上补的
+
+### [1528. Shuffle String](https://leetcode.com/problems/shuffle-string/)
+
+```cpp
+class Solution
+{
+public:
+    string restoreString(string s, vector<int> &indices)
+    {
+        string rtn = s;
+
+        for (int i = 0; i < indices.size(); i++)
+        {
+            rtn[indices[i]] = s[i];
+        }
+        return rtn;
+    }
+};
+```
+
+### [1529. Bulb Switcher IV](https://leetcode.com/contest/weekly-contest-199/problems/bulb-switcher-iv/)
+
+灯泡亮灭问题。其实逻辑很简单，判断相邻的两个灯是否初始状态相同即可。用pre保存上一个灯的状态，一开始为默认的状态‘0’
+
+```cpp
+class Solution
+{
+public:
+    int minFlips(string target)
+    {
+        int rtn = 0;
+        char pre = '0';
+        for (int i = 0; i < target.size(); i++)
+        {
+            if (target[i] != pre)
+            {
+                rtn++;
+                pre = target[i];
+            }
+        }
+        return rtn;
+    }
+};
+```
+
+### [1530. Number of Good Leaf Nodes Pairs](https://leetcode.com/problems/number-of-good-leaf-nodes-pairs/)
+
+判断树的叶节点之间的距离，有多少对小于distance。
+
+dfs吧，不太会。
+
+### [1531. String Compression II](https://leetcode.com/problems/string-compression-ii/)
