--- a/contest/2020/2020_8.md
+++ b/contest/2020/2020_8.md
@@ -118,3 +118,69 @@ public:
 
 [https://leetcode.com/problems/get-the-maximum-score/discuss/767987/JavaC%2B%2B-Two-Pointers-O(1)-Space](https://leetcode.com/problems/get-the-maximum-score/discuss/767987/JavaC%2B%2B-Two-Pointers-O(1)-Space)
 
+## weekly contest 201
+
+2020.08.09
+
+今天出去玩了，没参赛。题目应该只会做两题。
+
+### [1544. Make The String Great](https://leetcode.com/problems/make-the-string-great/)
+
+brute-force。主要是要注意大写加小写和小写加大写都算vice-versa
+
+```cpp
+class Solution
+{
+public:
+    string makeGood(string s, int sz = 0)
+    {
+        while (sz != s.size())
+        {
+            sz = s.size();
+            for (int i = 0; i + 1 < s.size(); ++i)
+                if (s[i] != s[i + 1] && tolower(s[i]) == tolower(s[i + 1]))
+                {
+                    s = s.substr(0, i) + s.substr(i + 2);
+                }
+        }
+        return s;
+    }
+};
+```
+
+### [1545. Find Kth Bit in Nth Binary String](https://leetcode.com/problems/find-kth-bit-in-nth-binary-string/)
+
+用递归解。注意是reverse+invert
+
+```cpp
+class Solution
+{
+public:
+    char findKthBit(int n, int k)
+    {
+        if (n == 1)
+            return '0';
+
+        int len = (1 << n) - 1;
+
+        if (k == len / 2 + 1)
+        {
+            return '1';
+        }
+        else if (k > len / 2 + 1)
+        {
+            return findKthBit(n - 1, len - k + 1) == '1' ? '0' : '1';
+        }
+        else
+            return findKthBit(n - 1, k);
+    }
+};
+```
+
+### [1546. Maximum Number of Non-Overlapping Subarrays With Sum Equals Target](https://leetcode.com/problems/maximum-number-of-non-overlapping-subarrays-with-sum-equals-target/)
+
+求最多能有多少个不重叠的子数组，和为target
+
+dp？
+
+### [1547. Minimum Cost to Cut a Stick](https://leetcode.com/problems/minimum-cost-to-cut-a-stick/)
