update weekly contest 202

--- a/contest/2020/2020_8.md
+++ b/contest/2020/2020_8.md
@@ -184,3 +184,74 @@ public:
 dp？
 
 ### [1547. Minimum Cost to Cut a Stick](https://leetcode.com/problems/minimum-cost-to-cut-a-stick/)
+
+## weekly contest 202
+
+2020.08.16 
+
+做了前两题，很简单。后两题顶不住
+
+### 1550. Three Consecutive Odds(https://leetcode.com/problems/three-consecutive-odds)
+
+```cpp
+class Solution
+{
+public:
+    bool threeConsecutiveOdds(vector<int> &arr)
+    {
+        if (arr.size() < 3)
+            return false;
+        for (int i = 0; i < arr.size() - 2; i++)
+        {
+            if ((arr[i] % 2 == 1) && (arr[i + 1] % 2 == 1) && (arr[i + 2] % 2 == 1))
+                return true;
+        }
+        return false;
+    }
+};
+```
+
+### 1551. Minimum Operations to Make Array Equal(https://leetcode.com/problems/minimum-operations-to-make-array-equal/)
+
+class Solution
+{
+public:
+    int minOperations(int n)
+    {
+        return (n % 2 == 0) ? (n / 2) * (n / 2) : (n / 2) * (n / 2 + 1);
+    }
+};
+
+### 1552. Magnetic Force Between Two Balls(https://leetcode.com/problems/magnetic-force-between-two-balls/)
+
+给定n个位置，和m个球，如何放置能够使得球与球之间的距离最小值最大？
+
+二分法?
+
+### 1553. Minimum Number of Days to Eat N Oranges(https://leetcode.com/problems/minimum-number-of-days-to-eat-n-oranges/)
+
+n个橘子，每天有三种吃法：
+
+* 吃1个
+* n%3==0,吃掉2/3
+* n%2==0,吃掉1/2
+
+最少需要多少天能吃完？
+
+用unordered_map作为dp
+
+```cpp
+class Solution
+{
+public:
+    unordered_map<int, int> dp;
+    int minDays(int n)
+    {
+        if (n <= 1)
+            return n;
+        if (dp.count(n) == 0)
+            dp[n] = 1 + min(n % 2 + minDays(n / 2), n % 3 + minDays(n / 3));
+        return dp[n];
+    }
+};
+```
