update weekly contest 203

--- a/contest/2020/2020_8.md
+++ b/contest/2020/2020_8.md
@@ -255,3 +255,71 @@ public:
     }
 };
 ```
+
+## weekly contest 203
+
+2020.08.23
+
+昨天加班到12点。今天起来头晕晕的，做了前两题。都比较简单
+
+### [1560. Most Visited Sector in a Circular Track](https://leetcode.com/problems/most-visited-sector-in-a-circular-track/)
+
+第一题的难点主要在于读懂题目。只要关心头尾两个数就行了。
+
+哈哈哈哈这道题全是👎，我也情不自禁点了一个
+
+```cpp
+class Solution
+{
+public:
+    vector<int> mostVisited(int n, vector<int> &rounds)
+    {
+        int start = rounds[0];
+        int end = rounds.back();
+        vector<int> ret;
+        if (end >= start)
+        {
+            for (int i = start; i <= end; i++)
+                ret.push_back(i);
+        }
+        else if (end < start)
+        {
+            for (int i = 1; i <= end; i++)
+                ret.push_back(i);
+            for (int i = start; i <= n; i++)
+                ret.push_back(i);
+        }
+
+        return ret;
+    }
+};
+```
+
+### [1561. Maximum Number of Coins You Can Get](https://leetcode.com/problems/maximum-number-of-coins-you-can-get/)
+
+抓硬币问题。很简单，排个序，去掉1/3个最小的，然后隔两个取一个就行了。记得leetcode有类似的题。说实话这道题注水很严重，不配medium难度。
+
+```cpp
+class Solution
+{
+public:
+    int maxCoins(vector<int> &piles)
+    {
+        sort(piles.begin(), piles.end());
+        int n = piles.size();
+        int k = n / 3;
+        int rtn = 0;
+        for (int i = k; i < n; i += 2)
+            rtn += piles[i];
+        return rtn;
+    }
+};
+```
+
+### [1562. Find Latest Group of Size M](https://leetcode.com/problems/find-latest-group-of-size-m/)
+
+难。
+
+### [1563. Stone Game V](https://leetcode.com/problems/stone-game-v/)
+
+难。
