--- a/contest/2020/2020_8.md
+++ b/contest/2020/2020_8.md
@@ -323,3 +323,52 @@ public:
 ### [1563. Stone Game V](https://leetcode.com/problems/stone-game-v/)
 
 难。
+
+## weekly contest 204
+
+2020.8.30
+
+就做了一题。我也太菜了吧。
+
+### [1566. Detect Pattern of Length M Repeated K or More Times](https://leetcode.com/problems/detect-pattern-of-length-m-repeated-k-or-more-times/)
+
+brute-force即可
+
+```cpp
+class Solution
+{
+public:
+    bool containsPattern(vector<int> &arr, int m, int k)
+    {
+
+        for (int i = 0; i < arr.size(); i++)
+        {
+            bool flag = true;
+            for (int n = 0; n < m; n++)
+            {
+                int p = i;
+                for (int j = 1; j < k; j++)
+                {
+                    p += m;
+                    if ((p + n) >= arr.size() || arr[i + n] != arr[p + n])
+                    {
+                        flag = false;
+                        break;
+                    }
+                }
+            }
+            if (flag)
+                return true;
+        }
+        return false;
+    }
+};
+```
+
+### [1567. Maximum Length of Subarray With Positive Product](https://leetcode.com/problems/maximum-length-of-subarray-with-positive-product/)
+
+给一个int数组，求最长子数组，其乘积为正数。
+
+### [1568. Minimum Number of Days to Disconnect Island](https://leetcode.com/problems/minimum-number-of-days-to-disconnect-island/)
+
+### [1569. Number of Ways to Reorder Array to Get Same BST](https://leetcode.com/problems/number-of-ways-to-reorder-array-to-get-same-bst/)
