--- a/contest/2020/2020_9.md
+++ b/contest/2020/2020_9.md
@@ -114,3 +114,69 @@ public:
 ```
 
 ### [1579. Remove Max Number of Edges to Keep Graph Fully Traversable](https://leetcode.com/problems/remove-max-number-of-edges-to-keep-graph-fully-traversable/)
+
+## weekly contest 206
+
+2020.09.13
+
+做了两题
+
+### [1582. Special Positions in a Binary Matrix](https://leetcode.com/problems/special-positions-in-a-binary-matrix/)
+
+brute-force
+
+```cpp
+class Solution
+{
+public:
+    int numSpecial(vector<vector<int>> &mat)
+    {
+        int m = mat.size();
+        int n = mat[0].size();
+        int ret = 0;
+        for (int i = 0; i < m; i++)
+        {
+            for (int j = 0; j < n; j++)
+            {
+                if (mat[i][j] == 1)
+                {
+                    bool flag = true;
+                    for (int k = 0; k < m; k++)
+                    {
+                        if (k != i && mat[k][j] == 1)
+                        {
+                            flag = false;
+                            break;
+                        }
+                    }
+                    for (int k = 0; k < n; k++)
+                    {
+                        if (k != j && mat[i][k] == 1)
+                        {
+                            flag = false;
+                            break;
+                        }
+                    }
+
+                    if (flag)
+                        ret++;
+                }
+            }
+        }
+        return ret;
+    }
+};
+```
+
+### [1583. Count Unhappy Friends](https://leetcode.com/problems/count-unhappy-friends/)
+
+傻逼题目。。
+
+### [1584. Min Cost to Connect All Points](https://leetcode.com/problems/min-cost-to-connect-all-points/)
+
+给一些二维点，求一个最小子树，使得连接的代价最小。两个点的代价是|x1-x2|+|y1-y2|
+
+prime或者kruskal算法。但好像会TLE？ 
+
+### [1585. Check If String Is Transformable With Substring Sort Operations](https://leetcode.com/problems/check-if-string-is-transformable-with-substring-sort-operations/)
+
