update weekly contest 207

--- a/contest/2020/2020_9.md
+++ b/contest/2020/2020_9.md
@@ -180,3 +180,106 @@ prime或者kruskal算法。但好像会TLE？
 
 ### [1585. Check If String Is Transformable With Substring Sort Operations](https://leetcode.com/problems/check-if-string-is-transformable-with-substring-sort-operations/)
 
+## weekly contest 207
+
+2020.09.20
+
+做了前两题
+
+### [1592. Rearrange Spaces Between Words](https://leetcode.com/problems/rearrange-spaces-between-words/)
+
+主要是要注意只有一个单词的情况
+
+```cpp
+class Solution
+{
+public:
+    string reorderSpaces(string text)
+    {
+        vector<string> words;
+
+        std::istringstream is(text);
+        do
+        {
+            std::string substr;
+            is >> substr;
+            if (substr != "")
+                words.push_back(substr);
+        } while (is);
+
+        int spaceCount = 0;
+        for (int i = 0; i < text.length(); i++)
+            if (text[i] == ' ')
+                spaceCount++;
+        if (words.size() == 1)
+        {
+            string ret = words[0];
+            for (int j = 0; j < spaceCount; j++)
+                ret += ' ';
+            return ret;
+        }
+
+        int x = spaceCount / (words.size() - 1);
+        int y = spaceCount % (words.size() - 1);
+        string ret = "";
+
+        for (int i = 0; i < words.size() - 1; i++)
+        {
+            ret += words[i];
+            for (int j = 0; j < x; j++)
+                ret += ' ';
+        }
+        ret += words.back();
+        for (int j = 0; j < y; j++)
+            ret += ' ';
+        return ret;
+    }
+};
+```
+
+### [1593. Split a String Into the Max Number of Unique Substrings](https://leetcode.com/problems/split-a-string-into-the-max-number-of-unique-substrings/)
+
+把一个字符串分成一定数量的子串，使得每个子串各不相同，问最多能分成多少个子串。dfs
+
+```cpp
+class Solution
+{
+public:
+    int maxsize;
+    int helper(string &str, set<string> &strs)
+    {
+        if (str == "")
+        {
+            int n = strs.size();
+            maxsize = max(n, maxsize);
+            return 0;
+        }
+        for (int i = 1; i <= str.length(); i++)
+        {
+            string tempstr = str.substr(0, i);
+            if (strs.count(tempstr))
+                continue;
+            auto it = strs.insert(tempstr);
+            auto xx = str.substr(i);
+            helper(xx, strs);
+            strs.erase(tempstr);
+        }
+        return 0;
+    }
+
+    int maxUniqueSplit(string s)
+    {
+        maxsize = 0;
+        set<string> myset;
+        helper(s, myset);
+        return maxsize;
+    }
+};
+```
+
+### [1594. Maximum Non Negative Product in a Matrix](https://leetcode.com/problems/maximum-non-negative-product-in-a-matrix/)
+
+一个矩形有正有负，求从左上到右下按一定的路径走能获得的最大乘积。（只能往下或者往右走） dp
+
+### [1595. Minimum Cost to Connect Two Groups of Points](https://leetcode.com/problems/minimum-cost-to-connect-two-groups-of-points/)
+
