--- a/contest/2020/2020_9.md
+++ b/contest/2020/2020_9.md
@@ -283,3 +283,75 @@ public:
 
 ### [1595. Minimum Cost to Connect Two Groups of Points](https://leetcode.com/problems/minimum-cost-to-connect-two-groups-of-points/)
 
+## weekly contest 208
+
+2020.09.30
+
+因为国庆调休，并没有参加。今天放假了，补一下。
+
+### [1598. Crawler Log Folder](https://leetcode.com/problems/crawler-log-folder/)
+
+```cpp
+class Solution
+{
+public:
+    int minOperations(vector<string> &logs)
+    {
+
+        int ret = 0;
+        for (const auto &str : logs)
+        {
+            if (str == "./")
+                continue;
+            else if (str == "../")
+            {
+                if (ret > 0)
+                    ret--;
+            }
+            else
+                ret++;
+        }
+        return ret;
+    }
+};
+```
+
+### [1599. Maximum Profit of Operating a Centennial Wheel](https://leetcode.com/problems/maximum-profit-of-operating-a-centennial-wheel/)
+
+```cpp
+class Solution {
+public:
+    int minOperationsMaxProfit(vector<int>& customers, int boardingCost, int runningCost) {
+        
+        if(boardingCost*4 <=runningCost)
+            return -1;
+        
+        int waiting = 0;
+        int times = 0;
+        int maxValue = 0;
+        int value = 0;
+        int ret = -1;
+        int i = 0;
+        while(i<customers.size()|| waiting!=0)
+        {
+            if(i<customers.size())
+                waiting+=customers[i++];
+            int board = waiting>4?4:waiting;
+            waiting-=board;
+            value += board*boardingCost-runningCost;
+            if(value>maxValue)
+            {
+                maxValue= value;
+                ret = times+1;
+            }
+            times++;
+            
+        }
+        return ret;
+    }
+};
+```
+
+### [1600. Throne Inheritance](https://leetcode.com/problems/throne-inheritance/)
+
+### [1601. Maximum Number of Achievable Transfer Requests](https://leetcode.com/problems/maximum-number-of-achievable-transfer-requests/)
