--- a/contest/2020/2020_10.md
+++ b/contest/2020/2020_10.md
@@ -71,3 +71,97 @@ public:
 ### [1610. Maximum Number of Visible Points](https://leetcode.com/problems/maximum-number-of-visible-points/)
 
 ### [1611. Minimum One Bit Operations to Make Integers Zero](https://leetcode.com/problems/minimum-one-bit-operations-to-make-integers-zero/)
+
+## weekly contest 210
+
+2020.10.11
+
+做了3题，都比较常规，第四题没时间看。第三题需要优化
+
+### 1614. Maximum Nesting Depth of the Parentheses(https://leetcode.com/problems/maximum-nesting-depth-of-the-parentheses/)
+
+题目哔哔了一大堆，结果就是求个括号最大深度。。
+
+```cpp
+class Solution
+{
+public:
+    int maxDepth(string s)
+    {
+
+        int depth = 0;
+        int ret = 0;
+        for (int i = 0; i < s.length(); i++)
+        {
+            if (s[i] == '(')
+            {
+                depth++;
+                ret = max(ret, depth);
+            }
+            else if (s[i] == ')')
+                depth--;
+        }
+        return ret;
+    }
+};
+```
+
+### 1615. Maximal Network Rank(https://leetcode.com/problems/maximal-network-rank/)
+
+没注意题目给的n很小，所以只需要O(n^2)遍历就可以了。
+
+```cpp
+class Solution
+{
+public:
+    int maximalNetworkRank(int n, vector<vector<int>> &roads)
+    {
+        vector<int> cnt(n);
+        size_t res = 0;
+        set<pair<int, int>> adjacent;
+        for (auto r : roads)
+        {
+            ++cnt[r[0]];
+            ++cnt[r[1]];
+            adjacent.insert({min(r[0], r[1]), max(r[0], r[1])});
+        }
+        for (auto i = 0; i < n; ++i)
+            for (auto j = i + 1; j < n; ++j)
+                res = max(res, cnt[i] + cnt[j] - adjacent.count({i, j}));
+        return res;
+    }
+};
+```
+
+### 1616. Split Two Strings to Make Palindrome(https://leetcode.com/problems/split-two-strings-to-make-palindrome/)
+
+判断a，b两个字符串能否分割后构成回文序列。求两个穿中间的部分是否是回文序列即可。
+
+```cpp
+class Solution
+{
+public:
+    bool isPa(string &s, int i, int j)
+    {
+        for (; i < j; ++i, --j)
+            if (s[i] != s[j])
+                return false;
+        return true;
+    }
+
+    bool check(string &a, string &b)
+    {
+        for (int i = 0, j = a.size() - 1; i < j; ++i, --j)
+            if (a[i] != b[j])
+                return isPa(a, i, j) || isPa(b, i, j);
+        return true;
+    }
+
+    bool checkPalindromeFormation(string a, string b)
+    {
+        return check(a, b) || check(b, a);
+    }
+};
+```
+
+### [1617. Count Subtrees With Max Distance Between Cities](https://leetcode.com/problems/count-subtrees-with-max-distance-between-cities/)
