update weekly contest 211

--- a/contest/2020/2020_10.md
+++ b/contest/2020/2020_10.md
@@ -165,3 +165,84 @@ public:
 ```
 
 ### [1617. Count Subtrees With Max Distance Between Cities](https://leetcode.com/problems/count-subtrees-with-max-distance-between-cities/)
+
+## Weekly Contest 211
+
+2020.10.18
+
+有点难啊，只会做第一题。这周好累，今天补觉
+
+### [1624. Largest Substring Between Two Equal Characters](https://leetcode.com/problems/largest-substring-between-two-equal-characters/)
+
+求字符串中相同两个字母最大间距
+
+```cpp
+class Solution {
+public:
+    int maxLengthBetweenEqualCharacters(string s) {
+        
+        int ret = -1;
+        vector<int> last(26,-1);
+        for(int i =0;i<s.length();i++)
+        {
+            if(last[s[i]-'a'] == -1)
+                last[s[i]-'a'] = i;
+            else
+            {
+                ret = max(ret,i-last[s[i]-'a']-1);
+            }
+        }
+        return ret;     
+        
+    }
+};
+```
+
+### [1625. Lexicographically Smallest String After Applying Operations](https://leetcode.com/problems/lexicographically-smallest-string-after-applying-operations/)
+
+dfs 暴力求解。
+
+### [1626. Best Team With No Conflicts](https://leetcode.com/problems/best-team-with-no-conflicts/)
+
+组建一个球队，每个队员有能力值score，年龄age，选则出一个球队使sum(score)最大，且年龄大的球员score不低于年龄小的球员
+
+dp
+
+```cpp
+class Solution
+{
+public:
+    int bestTeamScore(vector<int> &scores, vector<int> &ages)
+    {
+        vector<pair<int, int>> players;
+        int n = scores.size();
+        for (int i = 0; i < n; i++)
+        {
+            players.push_back({ages[i], scores[i]});
+        }
+        sort(players.begin(), players.end(), greater<>());
+
+        int ans = 0;
+        vector<int> dp(n + 1);
+        dp[0] = 0;
+        for (int i = 0; i < n; i++)
+        {
+            int score = players[i].second;
+            dp[i] = score;
+            for (int j = 0; j < i; j++)
+            {
+                if (players[j].second >= players[i].second)
+                {   // age of j is certainly >= i, so only important part to check
+                    //  before we add i and j in the same team is the score.
+                    dp[i] = max(dp[i], dp[j] + score);
+                }
+            }
+            ans = max(ans, dp[i]);
+        }
+        return ans;
+    }
+};
+```
+
+### [1627. Graph Connectivity With Threshold](https://leetcode.com/problems/graph-connectivity-with-threshold/)
+
