--- a/contest/2020/2020_10.md
+++ b/contest/2020/2020_10.md
@@ -246,3 +246,76 @@ public:
 
 ### [1627. Graph Connectivity With Threshold](https://leetcode.com/problems/graph-connectivity-with-threshold/)
 
+## Weekly Contest 212
+
+2020.10.25 做了两题，第三题dfs超时
+
+### [1629. Slowest Key](https://leetcode.com/problems/slowest-key/)
+
+```cpp
+class Solution
+{
+public:
+    char slowestKey(vector<int>& releaseTimes, string keysPressed)
+    {
+        vector<int> diff(releaseTimes.size());
+        diff[0] = releaseTimes[0];
+        int maxvalue = diff[0];
+        for (int i = 1; i < releaseTimes.size(); i++)
+        {
+            diff[i] = releaseTimes[i] - releaseTimes[i - 1];
+            maxvalue = max(maxvalue, diff[i]);
+        }
+
+        char retch = 'a';
+        for (int i = 0; i < diff.size(); i++)
+        {
+            if (diff[i] == maxvalue && keysPressed[i] > retch)
+                retch = keysPressed[i];
+        }
+        return retch;
+    }
+};
+```
+
+### [1630. Arithmetic Subarrays](https://leetcode.com/problems/arithmetic-subarrays/)
+
+判断是不是等差数列，brute force即可
+
+```cpp
+class Solution
+{
+public:
+    vector<bool> checkArithmeticSubarrays(vector<int>& nums, vector<int>& l, vector<int>& r)
+    {
+
+        vector<bool> ret(l.size(), true);
+
+        for (int i = 0; i < l.size(); i++)
+        {
+            vector<int> tmp(nums.begin() + l[i], nums.begin() + r[i] + 1);
+            sort(tmp.begin(), tmp.end());
+            if (tmp.size() < 2)
+            {
+                ret[i] = true;
+                continue;
+            }
+            int d = tmp[1] - tmp[0];
+            for (int j = 0; j + 1 < tmp.size(); j++)
+            {
+                if (tmp[j] + d != tmp[j + 1])
+                {
+                    ret[i] = false;
+                    break;
+                }
+            }
+        }
+
+        return ret;
+    }
+};
+```
+
+### [1631. Path With Minimum Effort](https://leetcode.com/problems/path-with-minimum-effort/)
+
+### [1632. Rank Transform of a Matrix](https://leetcode.com/problems/rank-transform-of-a-matrix/)
