--- a/contest/2020/2020_11.md
+++ b/contest/2020/2020_11.md
@@ -79,3 +79,98 @@ public:
 ### [1642. Furthest Building You Can Reach](https://leetcode.com/problems/furthest-building-you-can-reach/)
 
 ### [1643. Kth Smallest Instructions](https://leetcode.com/problems/kth-smallest-instructions/)
+
+## Weekly Contest 214
+
+2020.11.8 做了前两题
+
+### [1646. Get Maximum in Generated Array](https://leetcode.com/problems/get-maximum-in-generated-array/)
+
+```cpp
+class Solution
+{
+public:
+    int getMaximumGenerated(int n)
+    {
+        if (n <= 1)
+            return n;
+
+        vector<int> nums(n + 1);
+        nums[0] = 0;
+        nums[1] = 1;
+
+        for (int i = 2; i <= n; i++)
+        {
+            if (i % 2 == 0)
+            {
+                nums[i] = nums[i / 2];
+            }
+            else
+            {
+                nums[i] = nums[i / 2] + nums[i / 2 + 1];
+            }
+        }
+
+        int ret = 0;
+        for (int i = 0; i <= n; i++)
+        {
+            ret = max(ret, nums[i]);
+        }
+
+        return ret;
+    }
+};
+```
+
+### [1647. Minimum Deletions to Make Character Frequencies Unique](https://leetcode.com/problems/minimum-deletions-to-make-character-frequencies-unique/)
+
+代码好烂...
+
+```cpp
+class Solution
+{
+public:
+    int minDeletions(string s)
+    {
+        vector<int> f(26, 0);
+        for (int i = 0; i < s.length(); i++)
+        {
+            f[s[i] - 'a']++;
+        }
+
+        sort(f.begin(), f.end());
+        set<int> visited;
+        int ret = 0;
+        for (int i = 0; i < f.size(); i++)
+            visited.insert(f[i]);
+        for (int i = 0; i < f.size() - 1; i++)
+        {
+            if (f[i] == 0)
+                continue;
+
+            if (f[i] == f[i + 1])
+            {
+                for (int j = f[i] - 1; j >= 0; j--)
+                {
+                    if (j == 0)
+                    {
+                        ret += f[i];
+                        continue;
+                    }
+                    if (!visited.count(j))
+                    {
+                        ret += f[i] - j;
+                        visited.insert(j);
+                        break;
+                    }
+                }
+            }
+        }
+        return ret;
+    }
+};
+```
+
+### [1648. Sell Diminishing-Valued Colored Balls](https://leetcode.com/problems/sell-diminishing-valued-colored-balls/)
+
+### [1649. Create Sorted Array through Instructions](https://leetcode.com/problems/create-sorted-array-through-instructions/)
