update weekly contest 215

--- a/contest/2020/2020_11.md
+++ b/contest/2020/2020_11.md
@@ -174,3 +174,51 @@ public:
 ### [1648. Sell Diminishing-Valued Colored Balls](https://leetcode.com/problems/sell-diminishing-valued-colored-balls/)
 
 ### [1649. Create Sorted Array through Instructions](https://leetcode.com/problems/create-sorted-array-through-instructions/)
+
+## weekly contest 215
+
+做了第一题..题目也太难懂了
+
+### [1656. Design an Ordered Stream](https://leetcode.com/problems/design-an-ordered-stream/)
+
+```cpp
+class OrderedStream
+{
+public:
+    int ptr;
+    vector<string> strs;
+    set<int> ids;
+    OrderedStream(int n)
+    {
+        ptr = 1;
+        strs.resize(n + 1);
+    }
+
+    vector<string> insert(int id, string value)
+    {
+        strs[id] = value;
+        vector<string> ret;
+        ids.insert(id);
+        if (ids.count(ptr) == 1)
+        {
+            for (int i = ptr; i < strs.size(); i++)
+            {
+                if (ids.count(i) == 1)
+                {
+                    ret.push_back(strs[i]);
+                }
+                else
+                    break;
+            }
+            ptr = ptr + ret.size();
+        }
+        return ret;
+    }
+};
+```
+
+### [1657. Determine if Two Strings Are Close](https://leetcode.com/problems/determine-if-two-strings-are-close/)
+
+### [1658. Minimum Operations to Reduce X to Zero](https://leetcode.com/problems/minimum-operations-to-reduce-x-to-zero/)
+
+### [1659. Maximize Grid Happiness](https://leetcode.com/problems/maximize-grid-happiness/)
